# python2wb

./: pyproject.toml
.github/workflows/: build-deb.yml
debian/: changelog  control
