[tool.poetry]
name = "python2wb"
version = "0.0.0"          # будет перезаписываться из CHANGELOG.md в CI
description = "Module for Python integration with Wiren Board MQTT"
authors = ["Alexander Degtyarev <a.degtyarev@wirenboard.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
